--- a/projects/harcoura/dominion/Makefile
+++ b/projects/harcoura/dominion/Makefile
@@ -125,7 +125,7 @@ runtests: testDrawCard
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-all: playdom player testDrawCard testBuyCard badTestDrawCard tests unittestresults.out randomTests 
+all: playdom player testDrawCard testBuyCard badTestDrawCard tests unittestresults.out randomTests randomtestcard1.out randomtestcard2.out randomtestadventurer.out
 
 clean:
 	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe
